--- a/trunk/demo/proland-demo.cbp
+++ b/trunk/demo/proland-demo.cbp
@@ -94,10 +94,12 @@
 		<Unit filename="archives\earth\earth-srtm-editAll-async.xml" />
 		<Unit filename="archives\earth\earth-srtm-editAll.xml" />
 		<Unit filename="archives\earth\earth-srtm-trees2D.xml" />
+		<Unit filename="archives\earth\earth-srtm-trees3D.xml" />
 		<Unit filename="archives\earth\earth-srtm.xml" />
 		<Unit filename="archives\earth\earth.xml" />
 		<Unit filename="archives\fractal\fractalplanet.xml" />
 		<Unit filename="archives\fractal\fractalterrain-trees2D.xml" />
+		<Unit filename="archives\fractal\fractalterrain-trees3D.xml" />
 		<Unit filename="archives\fractal\fractalterrain.xml" />
 		<Unit filename="meshes\cone.mesh" />
 		<Unit filename="meshes\cube.mesh" />
@@ -228,11 +230,18 @@
 		<Unit filename="shaders\trees\dots.xml" />
 		<Unit filename="shaders\trees\elevationFilter.glsl" />
 		<Unit filename="shaders\trees\elevationFilter.xml" />
+		<Unit filename="shaders\trees\multisample.png" />
+		<Unit filename="shaders\trees\multisample.xml" />
 		<Unit filename="shaders\trees\renderTreeShader2D-shadows.xml" />
 		<Unit filename="shaders\trees\renderTreeShader2D.glsl" />
 		<Unit filename="shaders\trees\renderTreeShader2D.xml" />
+		<Unit filename="shaders\trees\renderTreeShader3D-shadows.xml" />
+		<Unit filename="shaders\trees\renderTreeShader3D.glsl" />
+		<Unit filename="shaders\trees\renderTreeShader3D.xml" />
 		<Unit filename="shaders\trees\renderTreeShadow2D.glsl" />
 		<Unit filename="shaders\trees\renderTreeShadow2D.xml" />
+		<Unit filename="shaders\trees\renderTreeShadow3D.glsl" />
+		<Unit filename="shaders\trees\renderTreeShadow3D.xml" />
 		<Unit filename="shaders\trees\selectTreeShader.glsl" />
 		<Unit filename="shaders\trees\selectTreeShader.xml" />
 		<Unit filename="shaders\trees\slopeFilter.glsl" />
@@ -240,6 +249,8 @@
 		<Unit filename="shaders\trees\treeBrdf.glhl" />
 		<Unit filename="shaders\trees\treeBrdf.glsl" />
 		<Unit filename="shaders\trees\treeBrdf.xml" />
+		<Unit filename="shaders\trees\treeBrdf3D.glsl" />
+		<Unit filename="shaders\trees\treeInfo3D.glsl" />
 		<Unit filename="shaders\trees\treeShadowMap.xml" />
 		<Unit filename="shaders\trees\upsampleLccShader.glsl" />
 		<Unit filename="shaders\trees\upsampleLccShader.xml" />
@@ -287,8 +298,16 @@
 		<Unit filename="textures\rivers\waterTexture.xml" />
 		<Unit filename="textures\roads\asphalt.jpg" />
 		<Unit filename="textures\roads\asphalt.xml" />
+		<Unit filename="textures\trees\groundCover.raw" />
+		<Unit filename="textures\trees\groundCover.xml" />
+		<Unit filename="textures\trees\treeAO.raw" />
+		<Unit filename="textures\trees\treeAO.xml" />
+		<Unit filename="textures\trees\treeKc.raw" />
+		<Unit filename="textures\trees\treeKc.xml" />
 		<Unit filename="textures\trees\trees2D.png" />
 		<Unit filename="textures\trees\trees2D.xml" />
+		<Unit filename="textures\trees\trees3D.png" />
+		<Unit filename="textures\trees\trees3D.xml" />
 		<Unit filename="ui\basicTweakBar.xml" />
 		<Unit filename="ui\prolandTweakBar.xml" />
 		<Unit filename="ui\tweakEarthViews.xml" />
